--- a/My-portfolio/index.html
+++ b/My-portfolio/index.html
@@ -22,9 +22,11 @@
                 Now, I have a passion for UX/UI design Because I love to design and make a good experience to use website or application, and I'm excited to share my journey with you.</p>
             </p>
             <!-- Include a video element -->
-             <video width="320" height="240" controls>
-                <source src="My-portfolio/video/uxuiwork.mp4" type="video/mp4">
+            <video width="320" height="240" controls>
+                <source src="My-portfolio/video/Screen Recording 2025-07-09 223615.mp4" type="video/mp4">
                 Your browser does not support the video tag.
+            </video>
+
         </section>
 
     </main>
