--- a/My-portfolio/index.html
+++ b/My-portfolio/index.html
@@ -23,9 +23,10 @@
             </p>
             <!-- Include a video element -->
             <video width="320" height="240" controls>
-                <source src="My-portfolio/video/Screen Recording 2025-07-09 223615.mp4" type="video/mp4">
+                <source src="My-portfolio/video/screen-recording-2025.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+
 
         </section>
 
