--- a/My-portfolio/index.html
+++ b/My-portfolio/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Your Name - Student Portfolio</title>
+    <title>Yadaporn Student Portfolio</title>
 </head>
 <body>
     <nav>
-        <h2>Your Name Portfolio</h2>
+        <h2>Yadaporn Likitchanwit Portfolio</h2>
         <p>
             <a href="#about">About Me</a> | 
             <a href="#projects">Projects</a> | 
@@ -22,9 +22,10 @@
                 Now, I have a passion for UX/UI design Because I love to design and make a good experience to use website or application, and I'm excited to share my journey with you.</p>
             </p>
             <!-- Include a video element -->
-            <video width="320" height="240" controls>
-                <source src="My-portfolio/video/screen-recording-2025.mp4" type="video/mp4">
-                Your browser does not support the video tag.
+            <video width="400" controls>
+                <source src="My-portfolio/video/screen-recording.mp4.mp4" type="video/mp4">
+                <source src="My-portfolio/video/screen-recording.mp4.mp4" type="video/ogg">
+                Your browser does not support HTML video.
             </video>
 
 
@@ -35,3 +36,4 @@
   
 
 </body>
+</html>
