--- a/My-portfolio/index.html
+++ b/My-portfolio/index.html
@@ -23,8 +23,8 @@
             </p>
             <!-- Include a video element -->
             <video width="400" controls>
-                <source src="My-portfolio/video/screen-recording.mp4.mp4" type="video/mp4">
-                <source src="My-portfolio/video/screen-recording.mp4.mp4" type="video/ogg">
+                <source src="My-portfolio/video/uxui2.mp4" type="video/mp4">
+                <!-- <source src="My-portfolio/video/screen-recording.mp4.mp4" type="video/ogg"> -->
                 Your browser does not support HTML video.
             </video>
 
