--- a/My-portfolio/index.html
+++ b/My-portfolio/index.html
@@ -19,8 +19,9 @@
             <h2>About Me</h2>
             <!-- Personal introduction -->
             <p>Hello! My name is Yadaporn Likitchanwit,You can call me Cat and I'm a third-year Digital Media Engineering student at Khon Kaen University.
-                Now, I have a passion for <span style="color: blue;">UX/UI design</span> Because I love to design and make a good experience to use website or application, and I'm excited to share my journey with you.</p>
+                Now, I have a passion for <span style="color: blue;">UX/UI design</span> Because I love to design and make a good experience to use website or application, and I'm excited to share my journey with you.
             </p>
+          
             <!-- Include a video element -->
             <video width="400" controls>
                 <source src="My-portfolio/media/uxui2.mp4" type="video/mp4">
