--- a/My-portfolio/index.html
+++ b/My-portfolio/index.html
@@ -127,7 +127,7 @@
             <address>
                 <h2>Contact Information</h2>
             </address>
-            <em>Yadaporn Likitchanwit<br>
+            <em><strong>Yadaporn Likitchanwit</strong><br>
                 Computer Engineering Student<br>
                 Faculty of Engineering<br>
                 Khon Kaen University<br>
